[package]
name = "associated"
keywords = ["enum", "associated", "constants"]
categories = ["no-std"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
associated-derive = { path = "associated-derive/", optional = true}

[features]
derive = ["associated-derive"]
